--- a/config/database.yml
+++ b/config/database.yml
@@ -4,9 +4,12 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: monopoly_exchange
   pool: 5
+  username: monopoly_exchange
+  password: monopoly
   timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
